<resources>
    <string name="app_name">FootballMatchScheduleApp</string>

    <string name="score_separator">vs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="goals_label">Goals</string>
    <string name="yellow_card_label">Yellow Card</string>
    <string name="red_card_label">Red Card</string>
    <string name="search">Search</string>

    <!-- League Data -->
    <string-array name="idLeague">
        <item>4328</item>
        <item>4329</item>
        <item>4330</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
        <item>4336</item>
        <item>4337</item>
        <item>4338</item>
    </string-array>

    <string-array name="strLeague">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>Scottish Premier League</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
        <item>Greek Superleague Greece</item>
        <item>Dutch Eredivisie</item>
        <item>Belgian Jupiler League</item>
    </string-array>
    
    <string-array name="strBadge">
        <item>https://www.thesportsdb.com/images/media/league/badge/i6o0kh1549879062.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/m7urjx1535732496.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vw72bl1534096708.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/0j55yv1534764799.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/ocy2fe1566216901.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8f5jmf1516458074.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/7onmyv1534768460.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/g5rxbr1517435561.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/ywoi5k1534590331.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8y3jti1564838854.png</item>
    </string-array>

</resources>
